--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ scipy>=0.15.1
 scikit-learn>=0.18
 matplotlib>=1.4.3
 pandas>=0.19
-torch>=1.10.1
+torch>=1.10.1+cpu
 segmentation-models-pytorch>=0.2.1
-torchvision>=0.11.2
+torchvision>=0.11.2+cpu
 pillow
